generazione appendice ST

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -52,7 +52,11 @@
 \section{Tracciamento}
 \input{tex/tracciamento}
 
-\section{Appendice A} % sì okay non ricordavo come farlo, è da sistemare
+
+
+\appendix
+
+\section{Note a riguardo di Backbone.js}
 \input{tex/appbackbone}
 
 \end{document}
