Modificata tabella test integrazione

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -1838,7 +1838,7 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hypertarget{TI11}{TI11} & Verificare che il sistema gestisca correttamente le componenti relative al package Compiler::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Compiler di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI12}{TI12} & Verificare che il sistema gestisca correttamente le componenti relative al package Generator::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI13}{TI13} & Verificare che il sistema gestisca correttamente le componenti relative al package Template::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Template di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI14}{TI14} & Test di integrazione fra le componenti CellType, Collection, Model e View e la libreria esterna \gloss{JointJS}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI14}{TI14} & Test di integrazione fra le componenti CellType, Collection, Model, Utility e View e la libreria esterna \gloss{JointJS}. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI15}{TI15} & Verificare che il sistema gestisca correttamente le componenti relative al package CellType. In particolare che gestisca correttamente l'interazione con il package View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI16}{TI16} & Verificare che il sistema gestisca correttamente le componenti relative al package Collection. In particolare che gestisca correttamente l'interazione con il package Model di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI17}{TI17} & Verificare che il sistema gestisca correttamente le componenti relative al package Model. In particolare che gestisca correttamente l'interazione con i package Collection e View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
