--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -28,6 +28,8 @@ Ci è parso utile indicizzare i \emph{design pattern} utilizzati; per questo son
 \subsubsection{Riferimenti informativi}
 \begin{itemize}
 	\item E. Gamma, R. Helm, R. Johnson, J. Vlissides, \emph{Design Patterns: Elements of Reusable Object-Oriented Software}.
+	\item A. Osmani, \emph{Developing Backbone.js Applications}.
+	\item A. Osmani, \emph{Learning Javascript Design Patterns}.
 	\item Libreria JointJS: \url{www.jointjs.com/opensource}, visitato in data 01/03/2017;
 	\item \emph{Plug-in} UML per JointJS: \url{resources.jointjs.com/demos/umlcd}, visitato in data 01/03/2017;
 	\item Libreria \backbonejs: \url{backbonejs.org}, visitato in data 01/03/2017;
