Aggiunta sezione Revisione di progettazione

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -1884,16 +1884,16 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 All'interno di questa sezione vengono riportati gli esiti delle attività di verifica svolte sui processi attivati e sui relativi prodotti secondo quanto stabilito nel \PdP.
 	\subsection{Revisione dei requisiti}
 		\subsubsection{Verifica processo di documentazione}
-		Le attività di verifica svolte sui documenti prodotti in questa prima fase sono state di due tipi:
+		Le attività di verifica svolte sui documenti prodotti sono state di due tipi:
 		\begin{itemize}		
 			\item attività di verifica manuali;
 			\item attività di verifica automatizzate.
 		\end{itemize}
 		
-		Le prime sono state svolte dai verificatori assegnati ad ogni documento utilizzando la tecnica di 					analisi statica walkthrough. Grazie ad essa è stato possibile correggere una discreta quantità di 					errori e imprecisioni presenti all'interno dei documenti prodotti fra cui: 
+		Le prime sono state svolte dai verificatori assegnati ad ogni documento utilizzando la tecnica di 					analisi statica walkthrough. Grazie ad essa è stato possibile correggere una discreta quantità di errori e imprecisioni presenti all'interno dei documenti prodotti fra cui: 
 		\begin{itemize}	
 			\item nuovi termini da inserire nel glossario;
-			\item termini presenti nel glossario ma non correttamente segnati;
+			\item termini presenti nel glossario, ma non correttamente segnati;
 			\item violazioni delle norme tipografiche e grammaticali come definite nel documento \NdP ;
 			\item refusi ed errori grammaticali;
 			\item periodi troppo lunghi e complessi da spezzare, ridurre e semplificare.
@@ -1923,8 +1923,9 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\end{table}
 		
 		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
-		Per verificare il soddisfacimento degli obiettivi di qualita definiti per tale processo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per 				ogniuna delle attività previste.
-		\\I risultati ottenuti sono elencati nella seguente tabella:	
+		Per verificare il soddisfacimento degli obiettivi di qualità definiti per tale processo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per ognuna delle attività previste.
+		
+		I risultati ottenuti sono elencati nella seguente tabella:	
 		\begin{table}[H]
 		\begin{tabular}{|l|l|l|}
 		\hline
@@ -1936,12 +1937,102 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\AdR 					&0\%		&0\%\\
 		\PdP 					&-25\%		&0\%\\
 		\Glossario 				&0\%		&0\%\\
-		\textit{Verbali.pdf} 	&0\%		&0\%\\
+		\textit{Verbali.pdf} 			&0\%		&0\%\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo degli indici di schedule e budget variance}
 		\end{table}
 
+
+\subsection{Revisione dei progettazione}
+		\subsubsection{Verifica processo di documentazione}
+		Le attività di verifica svolte sui documenti prodotti durante la progettazione sono state di due tipi:
+		\begin{itemize}		
+			\item attività di verifica manuali;
+			\item attività di verifica automatizzate.
+		\end{itemize}
+		
+		Le prime sono state svolte dai verificatori assegnati ad ogni documento utilizzando la tecnica di 					analisi statica walkthrough. Grazie ad essa è stato possibile correggere una discreta quantità di errori e imprecisioni presenti all'interno dei documenti prodotti fra cui: 
+		\begin{itemize}	
+			\item nuovi termini da inserire nel glossario;
+			\item termini presenti nel glossario, ma non correttamente segnati;
+			\item violazioni delle norme tipografiche e grammaticali come definite nel documento \NdP ;
+			\item refusi ed errori grammaticali;
+			\item periodi troppo lunghi e complessi da spezzare, ridurre e semplificare.
+		\end{itemize}
+		A partire dalla natura e frequenza degli errori identificati il gruppo ha iniziato a stilare una lista
+		di controllo da applicare nei successivi momenti di verifica nel contesto della strategia di verifica
+		inspection.
+
+		Le attività di verifica automatizzate, invece, sono state svolte calcolando l'indice Gulpease dei 	
+		diversi documenti prodotti attraverso l'uso di appositi strumenti web automatici. 
+		
+		I risultati ottenuti sono elencati nella seguente tabella:
+		\begin{table}[H]
+		\begin{tabular}{|l|l|l|}
+		\hline
+		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{~~~~~~Esito~~~~~~} \\
+		\hline
+		\PdQ 					&		&~~~~~~Superato~~~~~~\\
+		\NdP 					&		&~~~~~~Superato~~~~~~\\
+		\AdR 					&		&~~~~~~Superato~~~~~~\\
+		\PdP 					&		&~~~~~~Superato~~~~~~\\
+		\ST 					&		&~~~~~~Superato~~~~~~\\	
+		\Glossario 				&		&~~~~~~Superato~~~~~~\\
+		\textit{Verbali.pdf} 			&		&~~~~~~Superato~~~~~~\\
+		\hline
+		\end{tabular}
+		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
+		\end{table}
+		
+		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
+		Per verificare il soddisfacimento degli obiettivi di qualità definiti per tale processo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per ognuna delle attività previste.
+		
+		I risultati ottenuti sono elencati nella seguente tabella:	
+		\begin{table}[H]
+		\begin{tabular}{|l|l|l|}
+		\hline
+		\textbf{Documento} 		&\textbf{Schedule variance} &\textbf{Budget variance} 		\\
+		\hline
+		\PdQ 					&0\%		&0\%\\
+		\NdP 					&0\%		&0\%\\
+		\AdR 					&0\%		&0\%\\
+		\PdP 					&0\%		&0\%\\
+		\ST					&0\%		&0\%\\
+		\Glossario 				&0\%		&0\%\\
+		\textit{Verbali.pdf} 			&0\%		&0\%\\
+		\hline
+		\end{tabular}
+		\caption{Esiti del calcolo degli indici di schedule e budget variance}
+		\end{table}
+		
+		\subsubsection{Verifica processo di architettura del software}
+		La verifica del rispetto degli obiettivi stabiliti per tale processo è stata effettuata calcolando una serie di metriche specificate nel documento \NdP. Queste metriche sono d'aiuto alla comprensione del grado di completezza, correttezza e stile dell'architettura software prodotta.
+		
+		I risultati ottenuti sono elencati nella seguente tabella:
+		\begin{table}[H]
+		\begin{tabular}{|l|p{2cm}|p{2cm}|p{2cm}|}
+		\hline
+		\textbf{Metrica} 		 					&\textbf{Valore accettabile}	&\textbf{Valore obiettivo}	&\textbf{Valore effettivo}\\
+		\hline
+		Completezza									&								&							&\\
+		Numero di violazioni di alta importanza		&0								&0							&0\\						
+		Numero di violazioni di media importanza	&0								&0							&0\\						
+		Numero di violazioni di bassa importanza	&0								&0							&0\\						
+		\hline
+		Correttezza 								&								&							&\\
+		Numero di violazioni di alta importanza		&0								&0							&0\\						
+		Numero di violazioni di media importanza	&0								&0							&0\\						
+		Numero di violazioni di bassa importanza	&0								&0							&0\\						
+		\hline
+		Stile 										&								&							&\\
+		Numero di violazioni di alta importanza		&0								&0							&0\\						
+		Numero di violazioni di media importanza	&0								&0							&0\\						
+		Numero di violazioni di bassa importanza	&0								&0							&0\\						
+		\hline
+		\end{tabular}
+		\caption{Esiti del calcolo delle metriche relative alla progettazione}
+		\end{table}
 
 
 \appendix
